fixed homepage spacing

--- a/Homepage.css
+++ b/Homepage.css
@@ -151,7 +151,7 @@ a{
 
 .ImageOfMe{  
     height: 27vw;
-    width: 17vw;
+    width: 22vw;
     margin-top: -6.2vw;
     margin-left: 8vw;
 	background: transparent url('img/David.png') 0% 0% no-repeat padding-box;
